--- a/index.html
+++ b/index.html
@@ -17,25 +17,28 @@
   <div id="small_mult_chart_area">
     <p id="small_mult_chart_title">Blue Bike Duration by Time of Day</p>
     <p id="small_mult_chart_title2">All Rides in Greater Boston During an Average Day in Each Month, 2019<br>(horizontal line indicates trip duration mean, sans outliers)</p>
+
+<div id="small_mult_table_cont">
+
     <div id="small_mult_table">
-      <div>
-          <div id="item1"></div>
-          <div id="item2"></div>
-          <div id="item3"></div>
+      <div class="row">
+          <div class="item" id="item1"></div>
+          <div class="item" id="item2"></div>
+          <div class="item" id="item3"></div>
       </div>
-      <div>
-          <div id="item4"></div>
-          <div id="item5"></div>
-          <div id="item6"></div>
+      <div class="row">
+          <div class="item" id="item4"></div>
+          <div class="item" id="item5"></div>
+          <div class="item" id="item6"></div>
       </div>
-      <div>
-          <div id="item7"></div>
-          <div id="item8"></div>
-          <div id="item9"></div>
-        <div>
-            <div id="item10"></div>
-                <div id="item11"></div>
-                <div id="item12"></div>
+      <div class="row">
+          <div class="item" id="item7"></div>
+          <div class="item" id="item8"></div>
+          <div class="item" id="item9"></div>
+        <div class="row">
+            <div class="item" id="item10"></div>
+            <div class="item" id="item11"></div>
+            <div class="item" id="item12"></div>
           </div>
     </div>
 
@@ -43,6 +46,8 @@
     <div id="sm_mult_x_axis_label">Start Time</div>
 
   </div>
+
+</div>
 
   <div id="small_mult_chart_descript_cont">
     <p class="small_mult_chart_descript1">The small multiple chart to the left displays scatterplots of average daily Bluebike rides for each month of 2019. Each point represents a single Bluebike ride, with its x-coordinate representing the start time and y-coordinate its duration in minutes.
