--- a/index.html
+++ b/index.html
@@ -11,12 +11,20 @@
 <body>
 
   <!-- div that will contain visualization -->
-  <h1>A City In Motion</h1>
-  <p id="mainSubtitle">Boston's Bluebike system supports more than 12,000 rides per day throughout Boston, Cambridge, Brookline, and Somerville. </p>
-  <div id="main_chart_area_cont"><div id="main_chart_area"></div></div>
-  <div id="small_mult_chart_area">
-    <p id="small_mult_chart_title">Blue Bike Duration by Time of Day</p>
-    <p id="small_mult_chart_title2">Tip Duration (Min) of All Rides in Greater Boston During an Average Day in Each Month, 2019 (horizontal line indicates trip duration mean, sans outliers)</p>
+  <div class="flex-container">
+    <div id="mainText">
+      <h1>A City In Motion</h1>
+      <p id="mainSubtitle">Boston's Bluebike system supports more than 12,000 rides per day throughout Boston, Cambridge, Brookline, and Somerville. </p>
+    </div>
+
+    <div id="main_chart_area_cont">
+      <div id="main_chart_area"></div>
+    </div>
+  </div>
+
+    <div id="small_mult_chart_area">
+      <p id="small_mult_chart_title">Blue Bike Duration by Time of Day</p>
+      <p id="small_mult_chart_title2">Tip Duration (Min) of All Rides in Greater Boston During an Average Day in Each Month, 2019 (horizontal line indicates trip duration mean, sans outliers)</p>
 
 <div id="small_mult_table_cont">
 
